// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel basic rendering should render an additional className 1`] = `
<div>
  <div
    class="the-panel components-panel"
  />
</div>
`;

exports[`Panel basic rendering should render an empty div without any provided props 1`] = `
<div>
  <div
    class="components-panel"
  />
</div>
`;
